fix lexer